# SimpleCMakeProject

./: CMakeLists.txt  README.md  ptrswitch.c
